--- a/src/main/styles/colours.scss
+++ b/src/main/styles/colours.scss
@@ -21,3 +21,7 @@ $tableEvenRowHoverBackground: #fae37a;
 $tableEvenRowHoverForeground: #333333;
 $tableOddRowHoverBackground: #fae37a;
 $tableOddRowHoverForeground: #333333;
+
+$link: #0033FF;
+$linkHover: #0099FF;
+$linkActive: #FF9900;
