--- a/src/main/styles/header.scss
+++ b/src/main/styles/header.scss
@@ -18,7 +18,7 @@
   display: flex;
   flex: 1 1 auto;
   align-items: center;
-  color: $headerText;
+  color: $headerText !important;
   text-decoration: none;
 
   img {
