cleanup, new deps

--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -6,120 +6,123 @@
 @import 'editing';
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html, body, #root {
-  padding: 0;
-  margin: 0;
-  height: 100%;
+html,
+body,
+#root {
+	padding: 0;
+	margin: 0;
+	height: 100%;
 }
 
 body {
-  font-size: 16px;
-  font-family: $fontFamily;
-  color: $text;
+	font-size: 16px;
+	font-family: $fontFamily;
+	color: $text;
 }
 
-h1, h2 {
-  letter-spacing: -0.02rem;
+h1,
+h2 {
+	letter-spacing: -0.02rem;
 }
 
 #root {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 #mainColumnLayout {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  position: relative;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+	position: relative;
 
-  h2 {
-    margin-top: 0;
-    margin-bottom: 2rem;
-  }
+	h2 {
+		margin-top: 0;
+		margin-bottom: 2rem;
+	}
 }
 
 .appBody {
-  // display: flex;
-  flex-direction: column;
-  flex: 1 1 auto;
+	// display: flex;
+	flex-direction: column;
+	flex: 1 1 auto;
 }
 
 .container {
-  margin: 0 auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  max-width: 1440px;
+	margin: 0 auto;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	max-width: 1440px;
 }
 
 .containerInner {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 
-  main {
-    flex: 1 1 auto;
-  }
+	main {
+		flex: 1 1 auto;
+	}
 }
 
 .layoutContainer {
-  margin: 0 auto;
+	margin: 0 auto;
 
-  nav {
-    flex: 0 0 auto;
-  }
+	nav {
+		flex: 0 0 auto;
+	}
 
-  main {
-    flex: 1 1 auto;
-  }
+	main {
+		flex: 1 1 auto;
+	}
 }
 
 // Page Layouts
 .pageTitle {
-  padding: 2rem 1rem;
-  background-color: #ffffff;
+	padding: 2rem 1rem;
+	background-color: #ffffff;
 
-  h1 {
-    margin: 0;
-  }
+	h1 {
+		margin: 0;
+	}
 }
 
 .pageBody {
-  padding: 2.5rem 1rem;
+	padding: 2.5rem 1rem;
 
-  h2 {
-    margin-top: 0;
-    margin-bottom: 2rem;
-  }
+	h2 {
+		margin-top: 0;
+		margin-bottom: 2rem;
+	}
 }
 
 dt {
-  font-weight: bold;
+	font-weight: bold;
 }
 dd {
-  margin: 0 0 0 0.25rem;
+	margin: 0 0 0 0.25rem;
 }
 
 .MuiButton-label {
-  text-transform: none;
-  font-family: $fontFamily;
+	text-transform: none;
+	font-family: $fontFamily;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 
-  color: $link;
+	color: $link;
 
-  &:hover {
-    color: $linkHover;
-    text-decoration: underline;
-  }
-  &:visited {
-    color: $link;
-  }
-  &:active {
-    color: $linkActive;
-  }
+	&:hover {
+		color: $linkHover;
+		text-decoration: underline;
+	}
+	&:visited {
+		color: $link;
+	}
+	&:active {
+		color: $linkActive;
+	}
 }
