--- a/src/main/styles/colours.scss
+++ b/src/main/styles/colours.scss
@@ -22,6 +22,6 @@ $tableEvenRowHoverForeground: #333333;
 $tableOddRowHoverBackground: #fae37a;
 $tableOddRowHoverForeground: #333333;
 
-$link: #0033FF;
-$linkHover: #0099FF;
-$linkActive: #FF9900;
+$link: #0033ff;
+$linkHover: #0099ff;
+$linkActive: #ff9900;
