--- a/templates/main.html
+++ b/templates/main.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>WHIS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+	<head>
+		<meta charset="utf-8" />
+		<title>WHIS</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+	</head>
+	<body>
+		<div id="root"></div>
 
-<div id="root"></div>
-
-<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-<script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
-<% } %>
-</body>
-
+		<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
+		<script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+		<% } %>
+	</body>
 </html>
