--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -1,202 +1,56 @@
-.appBody {
-    background-color: rgb(242, 242, 242);
+.dash_grid {
+	display: grid;
+	grid-template-areas:
+            "profile welcome welcome"
+						"profile actions reports";
+	grid-template-columns: 380px repeat(2, 1fr);
+	grid-column-gap: 20px;
+	grid-row-gap: 20px;
 }
 
-.cards_container{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+.profile_card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	.name {
+		margin: 2rem auto;
+
+		display: grid;
+		grid-template-columns: 32px auto;
+		text-align: left;
+	}
+
+	.quick_access {
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: auto;
+		text-align: center;
+
+		width: 100%;
+
+		.actions {
+			svg {
+				&:not(:last-child) {
+					margin-right: 16px;
+				}
+
+			}
+		}
+	}
 }
 
-.dash_profile {
-    //flex: 1;
-    margin: 0px 10px;
-    padding: 30px;
-    opacity: 1;
-    text-align: center;
-    background-Color: rgb(255, 255, 255);
-    border-radius: 15px;
-    border-color: rgb(238, 247, 245);
-    box-shadow:  0px 0px 5px 0px #c3c3c3;
-    color: #666666;
-    width: 297px;
-    height: 693px;
-}
-.dash_title{
-    margin-top: 20px;
-    display: flex;
-    text-align: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-}
-.dash_title span{
-    font-size: 13px;
-    color: #ADB5BD;
-    line-height: 30px;
-}
-.card_title{   
-    margin: 0 45px;
-    font-size: 20px ;
-}
-.card_user_icon{
-    margin: 100px;
-}
-.userIcon{
-    transform: scale(8);
-}
-.card_icon{
-    transform: scale(1);
-}
-.card_contact{
-    margin: 0 35px;
-    font-size: 13px ;
-}
-.align_info{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    align-items: flex-start;
-}
-.quick_access{
-    padding: 10px;
-}
-.acc_icons{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.welcome_buttons {
+	display: flex;
+	justify-content: center;
+	button {
+		&:not(:last-child) {
+			margin-right: 16px;
+		}
+	}
 }
 
-//right widgets
-.widget_align{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: space-between;
-}
-
-//welcome widget
-.dash_welcome {
-    margin: 0px 10px;
-    padding: 30px;
-    opacity: 1;
-    text-align: center;
-    background-Color: rgb(255, 255, 255);
-    border-radius: 15px;
-    border-color: rgb(238, 247, 245);
-    box-shadow:  0px 0px 5px 0px #c3c3c3;
-    color: #666666;
-    width: 1068px;
-    height: 296px;
-}
-
-//actions widget
-.dash_actions {
-    margin: 0px 10px;
-    padding: 30px;
-    opacity: 1;
-    text-align: center;
-    background-Color: rgb(255, 255, 255);
-    border-radius: 15px;
-    border-color: rgb(238, 247, 245);
-    box-shadow:  0px 0px 5px 0px #c3c3c3;
-    color: #666666;
-    width: 625px;
-    height: 381px;
-}
-//reports widget
-.dash_reports {
-    margin: 0px 10px;
-    padding: 30px;
-    opacity: 1;
-    text-align: center;
-    background-Color: rgb(255, 255, 255);
-    border-radius: 15px;
-    border-color: rgb(238, 247, 245);
-    box-shadow:  0px 0px 5px 0px #c3c3c3;
-    color: #666666;
-    width: 423px;
-    height: 382px;
-}
-.widget_title{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: flex-start;
-}
-.rm_margin{
-    margin: 0;
-}
-.greeting{
-    font-size: 20px;
-    margin-top: 10px;
-}
-.align_btns{
-    margin-top: 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
-}
-.btn_actions{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, #38598a 5%);
-    border-radius: 15px;
-    border-width: 1px;
-    border-color: #eef7f5;
-    border-style: solid;
-    box-shadow: 0px 0px 5px 0px #c3c3c3;
-    color: #ffff;
-    font-size: 16px;
-    width: 281px;
-    height: 60px;
-    cursor: pointer;
-}
-.inner_content{
-    display: flex;
-    font-size: 20px;
-    align-items: stretch;
-}
-.inner_title{
-    font-size: 20px;
-    margin: 0px 0px 20px 0px ;
-    padding-left: 15px;
-}
-.widget_icon{
-    transform: scale(1.3);
-}
-.action_detail{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: space-between;
-}
-.content_padding{
-    padding-right: 80px;
-    margin-top: 8px;
-    font-size: 16px;
-}
-.report_detail{
-    margin-top: 8px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: row;
-    
-}
-
-.count_num{
-    color: #fcba19;
-    
-}
-.id_requests{
-    font-size: 12px;
+.count_num {
+	color: #fcba19;
 }
 
