update to BCSans

--- a/src/main/styles/fonts.scss
+++ b/src/main/styles/fonts.scss
@@ -31,4 +31,4 @@ $woff: './assets/fonts/BCSans/BCSans-Regular.woff';
 	font-display: swap;
 }
 
-$fontFamily: 'BCSans', Verdana, Arial, sans-serif;
+$fontFamily: 'BCSans', Arial, sans-serif;
