--- a/src/main/styles/dashboard.scss
+++ b/src/main/styles/dashboard.scss
@@ -3,7 +3,8 @@
 	grid-template-areas:
             "profile welcome welcome"
 						"profile actions reports";
-	grid-template-columns: 380px repeat(2, 1fr);
+	grid-template-columns: 350px 550px 400px;
+	// 380px repeat(2, 1fr)
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
 }
@@ -14,11 +15,12 @@
 	align-items: center;
 
 	.name {
-		margin: 2rem auto;
-
+		margin: 1rem auto;
 		display: grid;
-		grid-template-columns: 32px auto;
+		grid-template-columns: 64px auto;
+		grid-template-rows: auto 70px;
 		text-align: left;
+
 	}
 
 	.quick_access {
@@ -30,7 +32,7 @@
 		width: 100%;
 
 		.actions {
-			svg {
+			svg button{
 				&:not(:last-child) {
 					margin-right: 16px;
 				}
@@ -42,11 +44,20 @@
 
 .welcome_buttons {
 	display: flex;
-	justify-content: center;
+	padding-left: 25px;
+
 	button {
-		&:not(:last-child) {
-			margin-right: 16px;
-		}
+		// &:not(:last-child) {
+			// margin-right: 16px;
+			box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+			border-radius: 15px;
+			background-color: rgb(56, 89, 138);
+			text-transform: capitalize;
+			padding: 10px;
+			font-size: 16px;
+			margin-right: 6%;
+			width:30%;
+		// }
 	}
 }
 
