--- a/src/main/styles/inventory.scss
+++ b/src/main/styles/inventory.scss
@@ -30,3 +30,19 @@ table.inventory_table {
 		}
 	}
 }
+
+.checkIcon {
+	margin: auto;
+	width: 78px;
+	height: 78px;
+	border-radius: 999rem;
+	background-color: #3ADB76;
+	position: relative;
+	top: -35px;
+}
+.okBtn{
+	width: 110px;
+	height: 45px;
+	font-size: 16px;
+	border-radius: 6px;
+}
