--- a/src/main/styles/colours.scss
+++ b/src/main/styles/colours.scss
@@ -4,8 +4,11 @@ $logoBackground: #003366;
 $BCgovBlue: #003366;
 $BCgovGold: #fade81;
 
+$BCgovOrange:#FCBA19;
+
 $headerText: #ffffff;
 $darkBackgroundText: #ffffff;
+$navText:#ECFFFB;
 
 $text: #313132;
 $mutedText: lighten($text, 30%);
@@ -22,6 +25,10 @@ $tableEvenRowHoverForeground: #333333;
 $tableOddRowHoverBackground: #fae37a;
 $tableOddRowHoverForeground: #333333;
 
-$link: #0033ff;
+$link: #1a5a96;
 $linkHover: #0099ff;
 $linkActive: #ff9900;
+
+// $link: #0033ff;
+// $linkHover: #0099ff;
+// $linkActive: #ff9900;
