--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset='utf-8'/>
 		<title>WHIS</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name='viewport' content='width=device-width, initial-scale=1'/>
 	</head>
 	<body>
-		<div id="root"></div>
-
+		<div id='root'></div>
 		<% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-		<script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+		<script src='<%= htmlWebpackPlugin.files.chunks[chunk].entry %>'></script>
 		<% } %>
 	</body>
 </html>
