update some  ui

--- a/src/main/styles/base.scss
+++ b/src/main/styles/base.scss
@@ -49,7 +49,7 @@ h2 {
 	// display: flex;
 	flex-direction: column;
 	flex: 1 1 auto;
-	background: rgb(220, 220, 220);
+	background: #f2f2f2;
 }
 
 .container {
