single id update page ui

--- a/src/main/styles/colours.scss
+++ b/src/main/styles/colours.scss
@@ -4,12 +4,13 @@ $logoBackground: #003366;
 $BCgovBlue: #003366;
 $BCgovGold: #fade81;
 
-$BCgovOrange:#FCBA19;
+$BCgovOrange: #FCBA19;
 
 $headerText: #ffffff;
 $darkBackgroundText: #ffffff;
-$navText:#ECFFFB;
+$navText: #ECFFFB;
 
+$body2: #868e96;
 $text: #313132;
 $mutedText: lighten($text, 30%);
 
