--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -7,6 +7,9 @@
         border-radius: 4px;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     }
+    .tablehead {
+        background-color: #f8f9fa;
+    }
 
 }
 
@@ -78,8 +81,7 @@
     width: 1296px;
     display: flex;
     flex-direction: column;
-    // position: relative;
-    // top: -19px;
+    
 }
 
 .MuiButton-root.update_btn {
@@ -91,9 +93,6 @@
 }
 
 .requester {
-    .tablehead {
-        background-color: #f8f9fa;
-    }
 
     .MuiTableCell-root {
         color: $text;
@@ -102,6 +101,20 @@
     .MuiTableContainer-root {
         width: 1091px;
     }
+    .MuiButtonBase-root.MuiIconButton-root{
+        padding-right: 8px;
+    }
+    
+}
+.MuiButton-root.requesterFormBtn{
+    width: 106px;
+    height: 34px;
+    font-size: 14px;
+    text-transform: capitalize;
+}
+.MuiTextField-root.requesterFormInput{
+    width: 440px;
+    margin: 12px 16px;
 }
 
 #line2>p {
@@ -129,14 +142,28 @@
     border-radius: 50px;
 }
 
-.retired {
+.MuiTypography-subtitle1.retired {
     background-color: #868e96;
     width: 90px;
     text-align: center;
     height: 25px;
     border-radius: 50px;
+    color: #ffffff;
+    font-size: 13px;
 }
 
 .requesterTable {
     color: darkgrey;
+}
+
+
+//Status Form
+
+.flagIcon:hover{
+    color: #d8292f;
+}
+
+.MuiTooltip-tooltip{
+    color: #fcba19;
+    background-color: #d8292f;
 }
