--- a/src/main/styles/nav.scss
+++ b/src/main/styles/nav.scss
@@ -24,11 +24,14 @@
 		list-style-type: none;
 
 		position: relative;
+		display: flex;
+		flex-direction: row;
+
 		bottom: 0;
 	}
 
 	li {
-		display: inline-block;
+		//display: inline-flex;
 
 		padding: 0.25rem 0;
 		margin: 0;
@@ -47,6 +50,11 @@
 			color: $BCgovGold;
 			padding-left: 0.5rem;
 			padding-right: 0.5rem;
+		}
+
+		&.devModeToggle {
+			flex-grow: 1;
+			text-align: right;
 		}
 	}
 }
