--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -7,6 +7,7 @@
         border-radius: 4px;
         box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     }
+
     .tablehead {
         background-color: #f8f9fa;
     }
@@ -81,8 +82,43 @@
     width: 1296px;
     display: flex;
     flex-direction: column;
-    
 }
+
+.papper {
+    margin: 32px auto;
+    width: 1296px;
+    height: 716px;
+    padding-left: 58px;
+    padding-right: 40px;
+
+    .MuiTypography-body1 {
+        color: $text;
+    }
+
+    .MuiTypography-body2 {
+        color: $body2;
+    }
+
+
+    .info {
+        span {
+            width: 166px;
+        }
+
+        span:nth-child(1) {
+            margin-right: 167px;
+        }
+
+        span:nth-child(2) {
+            margin-right: 235px;
+        }
+
+        span:nth-child(3) {
+            margin-right: 67px;
+        }
+    }
+}
+
 
 .MuiButton-root.update_btn {
     width: 132px;
@@ -101,18 +137,21 @@
     .MuiTableContainer-root {
         width: 1091px;
     }
-    .MuiButtonBase-root.MuiIconButton-root{
+
+    .MuiButtonBase-root.MuiIconButton-root {
         padding-right: 8px;
     }
-    
+
 }
-.MuiButton-root.requesterFormBtn{
+
+.MuiButton-root.requesterFormBtn {
     width: 106px;
     height: 34px;
     font-size: 14px;
     text-transform: capitalize;
 }
-.MuiTextField-root.requesterFormInput{
+
+.MuiTextField-root.requesterFormInput {
     width: 440px;
     margin: 12px 16px;
 }
@@ -159,11 +198,11 @@
 
 //Status Form
 
-.flagIcon:hover{
+.flagIcon:hover {
     color: #d8292f;
 }
 
-.MuiTooltip-tooltip{
+.MuiTooltip-tooltip {
     color: #fcba19;
     background-color: #d8292f;
 }
