--- a/src/main/styles/updateID.scss
+++ b/src/main/styles/updateID.scss
@@ -99,6 +99,10 @@
         margin-right: 200px;
     }
 }
+.expandDetailsIcon{
+    position: relative;
+    top: 7px;
+}
 
 .papper {
     margin: 32px auto;
