--- a/src/main/styles/search.scss
+++ b/src/main/styles/search.scss
@@ -1,16 +1,84 @@
 @import "colours";
 
-.input_container{
-    padding: 30px 10px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: flex-start;
+.container {
+
+    .pageHead {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .mainTitle {
+            .MuiTypography-root:nth-child(1) {
+                font-size: 32px;
+                font-family: 'BCSans-Bold';
+            }
+
+            .MuiTypography-root:nth-child(2) {
+                font-size: 16px;
+                margin-bottom: 28px;
+                color: #787f81;
+            }
+        }
+
+        button {
+            height: 41px;
+            text-transform: capitalize;
+            font-size: 14px;
+            margin-right: 8px;
+        }
+    }
+
+    .paperStyle {
+        width: 1326px;
+        padding-inline: 80px;
+
+        .leftColumn{
+            width: 567px;
+            margin: 32px 32px 0 0;
+        }
+        .rightColumn{
+            width: 567px;
+            margin-top: 32px;
+        }
+        .cardButtons {
+            display: flex;
+            justify-content: flex-end;
+            margin-block: 44px 50px;
+
+            button:nth-child(1){
+                width: 131px;
+                height: 42px;
+                text-transform: capitalize;
+                margin-right: 12px;
+            }
+            button:nth-child(2){
+                width: 165px;
+                height: 42px;
+                text-transform: capitalize;
+                padding: 0;
+            }
+        }
+        .eventRadios {
+            width: 100%;
+            color: #c0c0c0;
+        }
+        .eventKeywords{
+            width: 1166px;
+            margin-top: 10px;
+        }
+    }
+
+
+
+    .detailsSubtitle {
+        font-family: 'BCSans-Bold';
+        font-size: 18px;
+        margin-block: 32px 10px;
+    }
 }
 
-.apply_btn{
-    padding: 30px 10px;
-    display: flex;
-    justify-content: flex-end;
+.detailsSubtitle {
+    font-family: 'BCSans-Bold';
+    font-size: 18px;
+    margin-block: 32px 10px;
 }
